# alu

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
chips/: 16 8-bit memory.json  256 8-BIT MEMORY.json  3 detector.json  4 AND.json  7 to 8-BIT Adder.json  7-8 bit signed adder.json  8 detector.json  8-BIT 3 state buffer.json  9 detector.json  Comparateur 1-bit.json  Inverseur 8-bit.json  NOT.json  Not arrenged adder.json  OR.json  SEMI ADDER.json  XOR.json
documentation/: index.md
documentation/chips/: 0 detector.json  1 detector.json  10 entry 8-bit OR.json  2 detector.json  4 detector.json  5 detector.json  6 detector.json  7 detector.json  8-BIT adder.json  8-bit OR.json  8-bit register.json  AND.json  Comparateur 8-bit.json  D latch.json  DECODER 2-4.json  Decomp 100 8-bit.json  FULL ADDER.json  NOR.json  Number detector.json  Number display.json  Stopper 8-bit.json  Stopper.json  s.json
documentation/introduction/: FAQ.md  chips.md  logic_gates.md
introduction/FAQ/: index.html
introduction/chips/: index.html
introduction/logic_gates/: index.html
search/: search_index.json
src/: FAQ.md  chips.md
src/Chips/: 0 detector.json  1 detector.json  10 entry 8-bit OR.json  16 8-bit memory.json  2 detector.json  256 8-BIT MEMORY.json  3 detector.json  4 AND.json  4 detector.json  5 detector.json  6 detector.json  7 detector.json  7 to 8-BIT Adder.json  7-8 bit signed adder.json  8 detector.json  8-BIT 3 state buffer.json  8-BIT adder.json  8-bit OR.json  8-bit register.json  9 detector.json  AND.json  (+18 more)
