[project]
name = "mkdocs-test"
version = "0.1.0"
description = ""
authors = [
    {name = "nnpfr",email = "217601970+nnpfr@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "mkdocs-material (>=9.6.14,<10.0.0)"
]

[tool.poetry]
packages = [{include = "mkdocs", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
